@startuml Guardian ERD
!define TABLE(name) entity name << (T,#FFAAAA) >>
!define PK(x) <b><color:#b8860b>x</color></b>
!define FK(x) <color:#aaaaaa>x</color>

skinparam entity {
    BackgroundColor White
    BorderColor Black
    ArrowColor #333333
}

skinparam linetype ortho
left to right direction

TABLE(users) {
    PK(id) : uuid <<PK>>
    --
    email : text <<unique>>
    password_hash : text
    name : text
    role : text
    last_login_at : timestamp
    created_at : timestamp
    updated_at : timestamp
}

TABLE(vendors) {
    PK(id) : uuid <<PK>>
    --
    name : text
    industry : text
    website : text
    contact_info : jsonb
    created_at : timestamp
    updated_at : timestamp
}

TABLE(assessments) {
    PK(id) : uuid <<PK>>
    --
    FK(vendor_id) : uuid <<FK>>
    FK(created_by) : uuid <<FK>>
    assessment_type : text
    solution_name : text
    solution_type : text
    status : text
    assessment_metadata : jsonb
    created_at : timestamp
    updated_at : timestamp
}

TABLE(conversations) {
    PK(id) : uuid <<PK>>
    --
    FK(user_id) : uuid <<FK>>
    FK(assessment_id) : uuid <<FK>>
    mode : text
    status : text
    context : jsonb
    title : text
    title_manually_edited : boolean
    started_at : timestamp
    last_activity_at : timestamp
    completed_at : timestamp
}

TABLE(messages) {
    PK(id) : uuid <<PK>>
    --
    FK(conversation_id) : uuid <<FK>>
    role : text
    content : jsonb
    attachments : jsonb
    created_at : timestamp
}

TABLE(files) {
    PK(id) : uuid <<PK>>
    --
    FK(user_id) : uuid <<FK>>
    FK(conversation_id) : uuid <<FK>>
    filename : text
    mime_type : text
    size : integer
    storage_path : text
    intake_context : jsonb
    intake_gap_categories : text[]
    intake_parsed_at : timestamp
    text_excerpt : text
    parse_status : varchar
    detected_doc_type : varchar
    detected_vendor_name : varchar
    created_at : timestamp
}

TABLE(questions) {
    PK(id) : uuid <<PK>>
    --
    FK(assessment_id) : uuid <<FK>>
    section_name : text
    section_number : integer
    question_number : integer
    question_text : text
    question_type : text
    question_metadata : jsonb
    created_at : timestamp
}

TABLE(responses) {
    PK(id) : uuid <<PK>>
    --
    FK(assessment_id) : uuid <<FK>>
    FK(file_id) : uuid <<FK>>
    batch_id : uuid
    section_number : integer
    question_number : integer
    question_text : text
    response_text : text
    confidence : real
    has_visual_content : boolean
    visual_content_description : text
    created_at : timestamp
}

TABLE(assessment_results) {
    PK(id) : uuid <<PK>>
    --
    FK(assessment_id) : uuid <<FK>>
    batch_id : uuid
    composite_score : integer
    recommendation : text
    overall_risk_rating : text
    narrative_report : text
    executive_summary : text
    key_findings : jsonb
    disqualifying_factors : jsonb
    narrative_status : varchar
    narrative_claimed_at : timestamp
    narrative_completed_at : timestamp
    narrative_error : text
    rubric_version : text
    model_id : text
    raw_tool_payload : jsonb
    scored_at : timestamp
    scoring_duration_ms : integer
}

TABLE(dimension_scores) {
    PK(id) : uuid <<PK>>
    --
    FK(assessment_id) : uuid <<FK>>
    batch_id : uuid
    dimension : text
    score : integer
    risk_rating : text
    findings : jsonb
    iso_clause_refs : jsonb
    confidence_level : varchar
    created_at : timestamp
}

' === ISO Compliance Tables (Epic 37) ===

TABLE(compliance_frameworks) {
    PK(id) : uuid <<PK>>
    --
    name : text
    description : text
    status : text
    created_at : timestamp
}

TABLE(framework_versions) {
    PK(id) : uuid <<PK>>
    --
    FK(framework_id) : uuid <<FK>>
    version : text
    effective_date : date
    is_current : boolean
    created_at : timestamp
}

TABLE(framework_controls) {
    PK(id) : uuid <<PK>>
    --
    FK(version_id) : uuid <<FK>>
    control_id : text
    title : text
    description : text
    parent_control_id : text
    created_at : timestamp
}

TABLE(interpretive_criteria) {
    PK(id) : uuid <<PK>>
    --
    FK(control_id) : uuid <<FK>>
    interpretation : text
    healthcare_context : text
    review_status : text
    created_at : timestamp
    updated_at : timestamp
}

TABLE(dimension_control_mappings) {
    PK(id) : uuid <<PK>>
    --
    FK(control_id) : uuid <<FK>>
    dimension : text
    relevance_weight : real
    rationale : text
    created_at : timestamp
}

TABLE(assessment_compliance_results) {
    PK(id) : uuid <<PK>>
    --
    FK(assessment_id) : uuid <<FK>>
    FK(control_id) : uuid <<FK>>
    batch_id : uuid
    compliance_level : text
    confidence : text
    evidence_summary : text
    created_at : timestamp
}

' Relationships - Core
users ||--o{ conversations : "creates"
users ||--o{ assessments : "creates"
users ||--o{ files : "uploads"

vendors ||--o{ assessments : "has"

assessments ||--o{ conversations : "linked to"
assessments ||--o{ questions : "contains"
assessments ||--o{ responses : "has"
assessments ||--o{ assessment_results : "has"
assessments ||--o{ dimension_scores : "has"
assessments ||--o{ assessment_compliance_results : "has"

conversations ||--o{ messages : "contains"
conversations ||--o{ files : "has"

files ||--o{ responses : "source for"

' Relationships - ISO Compliance
compliance_frameworks ||--o{ framework_versions : "has"
framework_versions ||--o{ framework_controls : "contains"
framework_controls ||--o{ interpretive_criteria : "interpreted by"
framework_controls ||--o{ dimension_control_mappings : "mapped to"
framework_controls ||--o{ assessment_compliance_results : "evaluated in"

@enduml
